[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "Sex_API"
version = "2.0"
requires-python = ">=3.12"
description = "A Python API for the Porn Site Sex.com/pins"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Johannes Habel", email = "EchterAlsFake@proton.me" }]
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
dependencies = ["eaf_base_api"]
classifiers = [
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/EchterAlsFake/Sex_API"

[project.scripts]
sex_api = "sex_api.api:main"


[tool.uv.build-backend]
module-name = "sex_api"
module-root = ""
